subprojects/swen430/src/test/resources/tests/valid/While_Valid_7.while
int getFive() {
    int i = 0;
    while (true) {
        if (i == 5) {
            break;
        }

        i = i + 1;
    }

    return i;
}

void main() {
    print getFive();
}
