subprojects/swen430/src/test/resources/tests/invalid/Typing_Invalid_21.while
int f(int x) {
    while(x) {
    	   x = x + 1;
    }
    return x;
}